# eds-pseudo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  dvc.yaml  mkdocs.yml  project.yml  pyproject.toml  sonar-project.properties  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: documentation.yml  release.yml  tests.yml
0.2.0/: 404.html  index.html
0.2.0/assets/figures/: bert_ablation_table.html  doc_type_ablation.json  ml_vs_rb_table.html  pdf_comparison_table.html
0.2.0/assets/termynal/: termynal.js
0.2.0/changelog/: index.html
0.2.0/dataset/: index.html
0.2.0/quickstart/: index.html
0.2.0/reproducibility/: index.html
0.2.0/results/: index.html
0.2.0/search/: search_index.json
configs/: config-cpu.cfg  config.cfg
data/: templates.txt
data/gen_dataset/: README.md  train.jsonl
demo/: app.py  public_small_dev_data.jsonl  public_small_test_data.jsonl  public_small_train_data.jsonl  requirements.txt  tuto_edsnlp_ner_training.ipynb
docs/: annotation-guide.md  dataset.md  index.md  inference.md  pretrained.md  quickstart.md  reproducibility.md  results.md  rule-based.md  synthetic-dataset.md  training.md
docs/assets/stylesheets/: extra.css
docs/scripts/: generate_reference.py
eds_pseudo/: __init__.py  adapter.py  scorer.py
eds_pseudo/pipes/: __init__.py  clean_entities.py  merge_entities.py  structured.py
eds_pseudo/pipes/addresses/: addresses.py
eds_pseudo/pipes/dates/: dates.py  factory.py  patterns.py
eds_pseudo/pipes/dates_normalizer/: dates_normalizer.py  patterns.py
eds_pseudo/pipes/pseudonymisation/: patterns.py  pseudonymisation.py
eds_pseudonymisation/: __init__.py  adapter.py  corpus_reader.py  evaluate.py  scorer.py
eds_pseudonymisation/pipelines/: __init__.py  clean_entities.py  merge_entities.py  structured.py
eds_pseudonymisation/pipelines/addresses/: __init__.py  addresses.py  patterns.py
eds_pseudonymisation/pipelines/dates/: __init__.py  dates.py  factory.py  patterns.py
eds_pseudonymisation/pipelines/pseudonymisation/: patterns.py  pseudonymisation.py
eds_pseudonymisation/utils/: evaluation.py  resources.py
latest/assets/figures/: bert_ablation_table.html  corpus_stats_table.html  ml_vs_rb_table.html  pdf_comparison_table.html
latest/changelog/: index.html
latest/dataset/: index.html
latest/presentations/: presentationFR.html
latest/quickstart/: index.html
latest/reproducibility/: index.html
latest/results/: index.html
main/: 404.html  index.html  references.bib  sitemap.xml
main/annotation-guide/: index.html
main/assets/figures/: bert-ablation.json  bert_ablation.json  corpus_stats_table.html  label_scores.json  limit_ablation.json
main/assets/stylesheets/: extra.css
main/changelog/: index.html
main/dataset/: index.html
main/inference/: index.html
main/presentations/: presentationFR.html
main/pretrained/: index.html
main/quickstart/: index.html
main/reproducibility/: index.html
main/results/: index.html
main/rule-based/: index.html
main/scripts/: generate_development.py
main/search/: search_index.json
main/synthetic-dataset/: index.html
main/training/: index.html
scripts/: analysis.py  convert.py  evaluate.py  experiments.py  figures.py  generate_dataset.py  infer.py  init-rule-based.py  package.py  partition.py  split_dataset.py  train.py  visualize_model.py
tests/: conftest.py  test_adapter.py  test_addresses.py  test_clean_entities.py  test_context.py  test_corpus_reader.py  test_dates.py  test_dates_normalizer.py  test_evaluation.py  test_logger.py  test_merge.py  test_pseudonymisation.py  test_scorer.py  test_simple_rules.py  test_structured.py  test_train.py
