[tool.poetry]
name = "eds-pseudonymisation"
version = "0.3.0"
description = ""
authors = ["Perceval Wajsburt <perceval.wajsburt-ext@aphp.fr>", "Alice Calliger <alice.calliger@aphp.fr>", "Basile Dura <basile.dura-ext@aphp.fr>"]
include = ["eds_pseudonymisation/resources/*.csv.gz"]

[tool.poetry.plugins."spacy_factories"]
"eds_pseudo.clean" = "eds_pseudonymisation.pipelines.clean_entities:CleanEntities"
"eds_pseudo.addresses" = "eds_pseudonymisation.pipelines.addresses.addresses:PseudonymisationAddresses"
"eds_pseudo.dates" = "eds_pseudonymisation.pipelines.dates.factory:create_component"
"eds_pseudo.simple_rules" = "eds_pseudonymisation.pipelines.pseudonymisation.pseudonymisation:Pseudonymisation"
"eds_pseudo.context" = "eds_pseudonymisation.pipelines.structured:ContextMatcher"
"eds_pseudo.merge" = "eds_pseudonymisation.pipelines.merge_entities:MergeEntities"

[tool.poetry.dependencies]
python = ">3.7.6,<3.12,!=3.8.1"
spacy = "^3.2.4"
edsnlp = "0.10.0beta1"
sentencepiece = "^0.1.96"
torch = ">=1.0"
scipy = [
    { version = "^1.10.1", markers = "python_version >= '3.8'" },
    { version = "^1.6.1", markers = "python_version < '3.8'" },
]

[tool.poetry.group.dev.dependencies]
dvc = { version = "^2.37.0", markers = "python_version >= '3.8'" }
loguru = "^0.6.0"
typer = "^0.6.1"
pandas = [
    { version = ">=1.1.0,<2.0.0", markers = "python_version < '3.8'" },
    { version = ">=1.4.0,<2.0.0", markers = "python_version >= '3.8'" }
]
pyarrow = "^7.0.0"
fsspec = "^2022.3.0"
black = "22.6.0"
flake8 = ">=3.0"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.950"
coverage = "^6.5.0"
toml = "^0.10.2"
wheel = "^0.40.0"
accelerate = { version = "^0.21.0", markers = "python_version >= '3.8'" }
rich-logger = "^0.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "^1.1.2"
mkdocs-bibtex = "^2.0.3"
mkdocs-gen-files = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocs-material = "^8.2.8"
mkdocstrings = "^0.18.1"
mkdocstrings-python = "^0.6.6"
mkdocs-glightbox = "^0.1.6"
mkdocs-autorefs = "^0.4.1"
mkdocs-charts-plugin = "^0.0.8"

[tool.poetry.group.spark]
optional = true

[tool.poetry.group.spark.dependencies]
pyspark = "2.4.3"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 10
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
fix = true
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
]
ignore = []
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I001"
]
fixable = ["E", "F", "W", "I"]

[build-system]
requires = ["poetry-core>=1.0.0", "pypandoc<1.8.0"]
build-backend = "poetry.core.masonry.api"
