[tool.edsnlp]
# Suggestion: choose a name that mixes both the architecture (eds-pseudo) and the
# dataset on which the model was trained (aphp)
# This field will be read by script/package.py
model_name = "eds-pseudo-public"

[tool.poetry]
name = "eds-pseudo"
version = "0.3.0"
description = "EDS-Pseudo is a hybrid model for detecting personally identifying entities in clinical reports"
authors = ["Perceval Wajsburt <perceval.wajsburt@aphp.fr>", "Alice Calliger <alice.calliger@aphp.fr>", "Basile Dura <basile.dura-ext@aphp.fr>"]
readme = "README.md"

[tool.poetry.plugins."spacy_factories"]
"eds_pseudo.clean"           = "eds_pseudo.pipes.clean_entities:CleanEntities"
"eds_pseudo.addresses"       = "eds_pseudo.pipes.addresses.addresses:PseudonymisationAddresses"
"eds_pseudo.dates"           = "eds_pseudo.pipes.dates.dates:PseudonymisationDates"
"eds_pseudo.dates_normalizer"= "eds_pseudo.pipes.dates_normalizer.dates_normalizer:DatesNormalizer"
"eds_pseudo.simple_rules"    = "eds_pseudo.pipes.pseudonymisation.pseudonymisation:Pseudonymisation"
"eds_pseudo.context"         = "eds_pseudo.pipes.structured:ContextMatcher"
"eds_pseudo.merge"           = "eds_pseudo.pipes.merge_entities:MergeEntities"

# Deprecated
"structured-data-matcher"    = "eds_pseudo.pipes.structured:ContextMatcher"
"pseudonymisation-rules"     = "eds_pseudo.pipes.pseudonymisation.pseudonymisation:Pseudonymisation"
"pseudonymisation-dates"     = "eds_pseudo.pipes.dates.dates:PseudonymisationDates"
"pseudonymisation-addresses" = "eds_pseudo.pipes.addresses.addresses:PseudonymisationAddresses"
"clean-entities"             = "eds_pseudo.pipes.clean_entities:CleanEntities"

[tool.poetry.dependencies]
# /!\ Do not hesitate to adjust python's version to fit your training and deployment environments
python = ">=3.8,<4.0"
edsnlp = { version = ">=0.10.7", extras = ["ml"] }
sentencepiece = "^0.1.96"

[tool.poetry.group.dev.dependencies]
dvc = { version = "^2.37.0", markers = "python_version >= '3.8'" }
loguru = "^0.6.0"
typer = "^0.6.1"
pandas = [
    { version = ">=1.1.0,<2.0.0", markers = "python_version < '3.8'" },
    { version = ">=1.4.0,<2.0.0", markers = "python_version >= '3.8'" }
]
pyarrow = "^7.0.0"
fsspec = "^2022.3.0"
black = "22.6.0"
flake8 = ">=3.0"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.950"
coverage = "^6.5.0"
toml = "^0.10.2"
wheel = "^0.40.0"
babel = "<2.0.0"
accelerate = { version = "^0.21.0", markers = "python_version >= '3.8'" }
rich-logger = "^0.3.0"
scipy = [
    { version = "*", markers = "python_version >= '3.8'" },
    { version = "*", markers = "python_version < '3.8'" }
]
torch = [
    { version = "*", markers = "python_version >= '3.8'" },
    { version = "*", markers = "python_version < '3.8'" }
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "~1.1.2"
mkdocs-bibtex = "^2.0.3"
mkdocs-gen-files = "^0.3.4"
mkdocs-literate-nav = "^0.4.1"
mkdocs-material = ">=9.2.0"
mkdocstrings = "~0.20.0"
mkdocstrings-python = "~1.1.0"
mkdocs-glightbox = "^0.1.6"
mkdocs-autorefs = "^0.4.1"
mkdocs-charts-plugin = "^0.0.8"

[tool.poetry.group.spark]
optional = true

[tool.poetry.group.spark.dependencies]
pyspark = "2.4.3"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 10
exclude = ["docs", "build", "tests"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
fix = true
extend-exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "build",
]
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I001"
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["edsnlp"]
order-by-type = true

[tool.coverage.report]
include = [
    "eds_pseudo/*",
    "scripts/*",
]
omit = [
    "tests/*",
]
exclude_lines = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "@overload",
    "pragma: no cover",
    "raise .*Error",
    "raise .*Exception",
    "warn\\(",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "Span.set_extension.*",
    "Doc.set_extension.*",
    "Token.set_extension.*",
]

[build-system]
requires = ["poetry-core>=1.0.0", "pypandoc<1.8.0"]
build-backend = "poetry.core.masonry.api"
